--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="panel active" style="background-image: url('./img/img1.jpg');">
             <h3>Explore The World</h3>
         </div>
-        <div class="panel active" style="background-image: url('./img/img1.jpg');">
+        <div class="panel" style="background-image: url('./img/img1.jpg');">
             <h3>Explore The World</h3>
         </div>
-        <div class="panel active" style="background-image: url('./img/img1.jpg');">
+        <div class="panel" style="background-image: url('./img/img1.jpg');">
             <h3>Explore The World</h3>
         </div>
-        <div class="panel active" style="background-image: url('./img/img1.jpg');">
+        <div class="panel" style="background-image: url('./img/img1.jpg');">
             <h3>Explore The World</h3>
         </div>
-        <div class="panel active" style="background-image: url('./img/img1.jpg');">
+        <div class="panel" style="background-image: url('./img/img1.jpg');">
             <h3>Explore The World</h3>
         </div>
     </div>
