--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     
     <div class="container">
         <div class="panel active" style="background-image: url('./img/img1.jpg');">
-            <h3>Explore The World</h3>
+            <h3>Explore New Zeland</h3>
         </div>
-        <div class="panel" style="background-image: url('./img/img1.jpg');">
-            <h3>Explore The World</h3>
+        <div class="panel" style="background-image: url('./img/img2.jpg');">
+            <h3>Explore The Night</h3>
         </div>
-        <div class="panel" style="background-image: url('./img/img1.jpg');">
-            <h3>Explore The World</h3>
+        <div class="panel" style="background-image: url('./img/img3.jpg');">
+            <h3>Explore The Mountains</h3>
         </div>
-        <div class="panel" style="background-image: url('./img/img1.jpg');">
-            <h3>Explore The World</h3>
+        <div class="panel" style="background-image: url('./img/img4.jpg');">
+            <h3>Explore The Beautiful View</h3>
         </div>
-        <div class="panel" style="background-image: url('./img/img1.jpg');">
-            <h3>Explore The World</h3>
+        <div class="panel" style="background-image: url('./img/img5.jpg');">
+            <h3>Explore The Entire World</h3>
         </div>
     </div>
 
-    <script src="./index.html"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
